src/objects/FF_Staging_Time_Off_Request__c.object
<CustomObject>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created PSA Assignment for the this time off request</description>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>FF Staging - Time Off Requests</relationshipLabel>
        <relationshipName>FF_Staging_Time_Off_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <description>Decimal field to match the Contact.Employee_Number_2__c field</description>
        <label>Employee Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Processing Message</description>
        <inlineHelpText>Processing Message</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>When &apos;I&apos; indicates insert, when &apos;D&apos; indicated delete</description>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>Absence Request</fullName>
                </value>
                <value>
                    <fullName>Absence Correction</fullName>
                </value>
                <value>
                    <fullName>Leave Request</fullName>
                </value>
                <value>
                    <fullName>Leave Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TO_Request_Detail_ID__c</fullName>
        <externalId>true</externalId>
        <label>TO Request Detail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_Request_Id__c</fullName>
        <label>TO Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WD_Key__c</fullName>
        <label>WD_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FF Staging - Time Off Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Number__c</columns>
        <columns>Operation__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Assignment__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Message__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Number__c</field>
            <operation>equals</operation>
            <value>14575</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Employees_records_by</fullName>
        <columns>WD_Key__c</columns>
        <columns>Operation__c</columns>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Assignment__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Has_Error__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Number__c</field>
            <operation>equals</operation>
            <value>9067</value>
        </filters>
        <label>Employees records by #</label>
        <sharedTo>
            <group>System_Administrators</group>
            <role>System_Operator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>From_WD</fullName>
        <columns>NAME</columns>
        <columns>Completion_Date__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>Assignment__c</columns>
        <columns>Operation__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Message__c</columns>
        <columns>Corrected__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WD_Key__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>From WD all</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>Employee_Number__c</columns>
        <columns>TO_Request_Detail_ID__c</columns>
        <columns>Operation__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Assignment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completion_Date__c</columns>
        <columns>Message__c</columns>
        <columns>Corrected__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assignment__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>WD_Key__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Not Processed Created Today</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Time_Off_Request_Errors</fullName>
        <columns>NAME</columns>
        <columns>Employee_Number__c</columns>
        <columns>Operation__c</columns>
        <columns>TO_Request_Detail_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Start_Date__c</columns>
        <columns>Assignment__c</columns>
        <columns>Total_Days__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WD_Key__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Operation__c</field>
            <operation>equals</operation>
            <value>Absence Correction</value>
        </filters>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>No assignment found</value>
        </filters>
        <label>Time Off Request Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_errors</fullName>
        <columns>Employee_Number__c</columns>
        <columns>NAME</columns>
        <columns>Assignment__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Days__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Operation__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>WD_Key__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today errors</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TOR-{00000}</displayFormat>
        <label>FF Staging - Time Off Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Staging - Time Off Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>